Banner fixed and aligned

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,20 +8,20 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 1px solid red; */
-
 }
 
 header{
     background-color: white;
+    width: 100vw;
+    height: 80px;
 }
 
 header img{
     padding: 10px 5px 10px 25px;
 }
-
 h1{
     display: inline-block;
+    vertical-align:20px;
 }
 
 /* light gray part */
